--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,25 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "public/index.php",
-        "use": "@vercel/php"
+    "functions": {
+      "api/index.php": {
+        "runtime": "vercel-php@0.7.1"
       }
-    ],
+    },
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "public/index.php"
+        "dest": "api/index.php"
       }
-    ]
+    ],
+    "env": {
+      "APP_ENV": "production",
+      "APP_DEBUG": "true",
+      "APP_URL": "https://tu-app-url.vercel.app",
+      "DB_CONNECTION": "mysql",
+      "DB_HOST": "192.168.1.141",
+      "DB_PORT": "3306",
+      "DB_DATABASE": "portfolio",
+      "DB_USERNAME": "alejandrogomcap",
+      "DB_PASSWORD": "monlau2025"
+    }
   }
