--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,13 @@
         "runtime": "vercel-php@0.7.1"
       }
     },
+        "builds": [
+        {
+        "src": "api/index.php",
+        "use": "@vercel/php"
+        }
+    ],
+    
     "routes": [
       {
         "src": "/(.*)",
